--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </section>
     <div class="img2"></div>
-    <section class="section2">
+    <section class="parallax">
       <div class="section2-content">
         Unlike smartphones, the larger sensor in a Sony mirrorless camera allows
         for a shallow depth of field, or bokeh, to selectively focus on your
